--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
                   username: ${{ secrets.DOCKER_USERNAME }}
                   password: ${{ secrets.DOCKER_PASSWORD }}
 
-            - name: Copy Compose File
+            - name: Copy Compose File && Caddyfile
               uses: appleboy/scp-action@v0.1.7
               with:
                   host: ${{ secrets.EC2_HOST }}
@@ -69,6 +69,16 @@ jobs:
                   key: ${{ secrets.EC2_SSH_KEY }}
                   source: "docker-compose.yml"
                   target: "/home/${{ secrets.EC2_USER }}/server"
+          
+            - name: Copy Caddyfile
+              uses: appleboy/scp-action@v0.1.7
+              with:
+                  host: ${{ secrets.EC2_HOST }}
+                  username: ${{ secrets.EC2_USER }}
+                  key: ${{ secrets.EC2_SSH_KEY }}
+                  source: "Caddyfile"
+                  target: "/home/${{ secrets.EC2_USER }}/server"
+           
 
             - name: Deploy via SSH
               uses: appleboy/ssh-action@v1.0.3
