--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3.8'
+
 
 services:
   postgres:
     image: postgres:16-alpine
     container_name: auth_postgress
-    restart: always
+    restart: unless-stopped
     profiles:
       - prod
       - dev
@@ -57,6 +57,27 @@ services:
       - .env.local
     ports:
       - '5080:8545'
+    networks:
+      - app-network
+
+  caddy:
+    image: caddy:latest
+    container_name: caddy
+    restart: unless-stopped
+    profiles:
+      - prod
+    ports:
+      - '80:80'
+      - '443:443'
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
+    depends_on:
+      server:
+        condition: service_started
+      frontend:
+        condition: service_started
     networks:
       - app-network
 
