--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     profiles:
       - prod
       - dev
+      - server
     env_file:
       - .env
     environment:
@@ -34,6 +35,7 @@ services:
     restart: unless-stopped
     profiles:
       - prod
+      - server
     env_file:
       - .env
     environment:
@@ -53,6 +55,7 @@ services:
     restart: unless-stopped
     profiles:
       - prod
+      - frontend
     env_file:
       - .env.local
     ports:
@@ -66,6 +69,7 @@ services:
     restart: unless-stopped
     profiles:
       - prod
+      - caddy
     ports:
       - '80:80'
       - '443:443'
@@ -87,3 +91,5 @@ networks:
 
 volumes:
   postgres_data:
+  caddy_data:
+  caddy_config:
