--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,7 @@ jobs:
               with:
                   username: ${{ secrets.DOCKER_USERNAME }}
                   password: ${{ secrets.DOCKER_PASSWORD }}
+                  script : echo "Docker login successful"
 
             - name: Check VPS SSH connectivity
               uses: appleboy/ssh-action@v1.0.3
