--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,25 +26,20 @@ services:
       retries: 5
     networks:
       - app-network
-  
-  prisma-studio:
-    image: prismagraphql/prisma-studio:latest
-    container_name: prisma_studio
+
+pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin
     restart: unless-stopped
     profiles:
       - dev
-      - prisma
-      - prod
-      - server
-    env_file:
-      - .env
     environment:
-      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
     ports:
-      - '6525:5555'
+      - '5050:80'
     depends_on:
-      postgres:
-        condition: service_healthy
+      - postgres
     networks:
       - app-network
   
