--- a/Caddyfile
+++ b/Caddyfile
@@ -10,5 +10,9 @@ api.shamimrana.me {
 
 # prisma studio
 db.shamimrana, db.shamimrana.me {
+     basicauth {
+        shamimrana2006 $2y$10$/x6ntJtyiAp/NAJlWZlYK.ikj517KYpgqgC.pg4xY32LrLpH6qc6y
+    }
+
     reverse_proxy prisma_studio:7896
 }
