--- a/Caddyfile
+++ b/Caddyfile
@@ -9,10 +9,10 @@ api.shamimrana.me {
 }
 
 # prisma studio
-db.shamimrana, db.shamimrana.me {
+db.shamimrana.me {
      basicauth {
         shamimrana2006 $2y$10$/x6ntJtyiAp/NAJlWZlYK.ikj517KYpgqgC.pg4xY32LrLpH6qc6y
     }
 
-    reverse_proxy prisma_studio:7896
+    reverse_proxy localhost:7896
 }
