--- a/Caddyfile
+++ b/Caddyfile
@@ -5,7 +5,7 @@ shamimrana.me {
 
 # Backend API
 api.shamimrana.me {
-    reverse_proxy server:6545
+    reverse_proxy localhost:5090
 }
 
 # prisma studio
@@ -13,5 +13,5 @@ db.shamimrana.me {
      basicauth {
         shamimrana2006 $2y$10$/x6ntJtyiAp/NAJlWZlYK.ikj517KYpgqgC.pg4xY32LrLpH6qc6y
     }
-    reverse_proxy prisma_studio:5555
+    reverse_proxy prisma_studio:7896
 }
