--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
+    "firebase-admin": "^13.6.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "passport": "^0.7.0",
+    "passport-discord": "^0.1.4",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
@@ -70,6 +72,7 @@
     "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
+    "@types/passport-discord": "^0.1.15",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/pg": "^8.16.0",
