--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,12 @@
 PORT=6545
 
 #email verification required or not if yes then true otherwise false
-EMAIL_VERIFICATION_REQUIRED=dfdf
-
+EMAIL_VERIFICATION_REQUIRED=true
+SERVER_NAME=server
 # PostgreSQL Database Credentials
-POSTGRES_USER=authentication
-POSTGRES_PASSWORD=authentication123
-POSTGRES_DB=auth_db
+POSTGRES_USER=${SERVER_NAME}_user
+POSTGRES_PASSWORD=${SERVER_NAME}_Pass
+POSTGRES_DB=${SERVER_NAME}_DB
 POSTGRES_PORT=8569
 
 # Database Connection URL
@@ -17,8 +17,8 @@ DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POS
 JWT_SECRET=your_jwt_secret_key_here
 
 # check cookie and token expiration easily
-ACCESS_TOKEN_EXPIRATION_MS= 10000 # 10 second in milliseconds
-REFRESH_TOKEN_EXPIRATION_MS= 12000 # 12 second in milliseconds
+ACCESS_TOKEN_EXPIRATION_MS= 604800000 # 7day in milliseconds
+REFRESH_TOKEN_EXPIRATION_MS= 2592000000 # 30 days in milliseconds
 
 
 
