--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: shamimrana2006/server:latest
+          tags: ${{ secrets.IMMAGE_NAME }}
   deploy:
         name: Deploy
         runs-on: ubuntu-latest
