--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,7 @@ jobs:
                   host: ${{ secrets.EC2_HOST }}
                   username: ${{ secrets.EC2_USER }}
                   key: ${{ secrets.EC2_SSH_KEY }}
+                  # port: ${{ secrets.EC2_SSH_PORT }}
                   script: |
                       echo "VPS login successful"
 
@@ -76,6 +77,7 @@ jobs:
                   host: ${{ secrets.EC2_HOST }}
                   username: ${{ secrets.EC2_USER }}
                   key: ${{ secrets.EC2_SSH_KEY }}
+                  # port: ${{ secrets.EC2_SSH_PORT }}
                   source: "docker-compose.yml"
                   target: "/home/${{ secrets.EC2_USER }}/server"
           
@@ -85,6 +87,7 @@ jobs:
                   host: ${{ secrets.EC2_HOST }}
                   username: ${{ secrets.EC2_USER }}
                   key: ${{ secrets.EC2_SSH_KEY }}
+                  # port: ${{ secrets.EC2_SSH_PORT }}
                   source: "Caddyfile"
                   target: "/home/${{ secrets.EC2_USER }}/server"
            
@@ -95,6 +98,7 @@ jobs:
                   host: ${{ secrets.EC2_HOST }}
                   username: ${{ secrets.EC2_USER }}
                   key: ${{ secrets.EC2_SSH_KEY }}
+                  # port: ${{ secrets.EC2_SSH_PORT }}
                   script: |
                       cd /home/${{ secrets.EC2_USER }}/server
                       # Pull the latest images
