--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,30 @@ services:
       retries: 5
     networks:
       - app-network
+  postgresProd:
+    image: postgres:16-alpine
+    container_name: ${SERVER_NAME}_postgres
+    restart: unless-stopped
+    profiles:
+      - prod
+      - server
+    env_file:
+      - .env
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    # ports:
+    #   - '${POSTGRES_PORT:-5432}:5432'
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - app-network
 
   server:
     image: ${IMMAGE_NAME}
