--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,8 +71,8 @@ services:
     environment:
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
     ports:
-      - '${PRISMA_STUDIO_PORT}:5555'
-    command: npx prisma studio --port 5555 --browser none
+      - '${PRISMA_STUDIO_PORT_LOCAL}:${PRISMA_STUDIO_PORT}'
+    command: npx prisma studio --port ${PRISMA_STUDIO_PORT} --browser none
     depends_on:
       postgres:
         condition: service_healthy
@@ -88,6 +88,8 @@ services:
       - caddy
     ports:
       - '80:80'
+      - '8000:8000'
+      - '8001:8001'
       - '443:443'
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
