--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,7 @@ jobs:
                   key: ${{ secrets.EC2_SSH_KEY }}
                   # port: ${{ secrets.EC2_SSH_PORT }}
                   source: "docker-compose.yml"
-                  target: "/home/${{ secrets.EC2_USER }}/server"
+                  target: "/home/${{ secrets.EC2_USER }}/${{ secrets.SERVER_NAME }}/"
           
             - name: Copy Caddyfile
               uses: appleboy/scp-action@v0.1.7
@@ -89,7 +89,7 @@ jobs:
                   key: ${{ secrets.EC2_SSH_KEY }}
                   # port: ${{ secrets.EC2_SSH_PORT }}
                   source: "Caddyfile"
-                  target: "/home/${{ secrets.EC2_USER }}/server"
+                  target: "/home/${{ secrets.EC2_USER }}/${{ secrets.SERVER_NAME }}/"
            
 
             - name: Deploy via SSH
@@ -100,7 +100,7 @@ jobs:
                   key: ${{ secrets.EC2_SSH_KEY }}
                   # port: ${{ secrets.EC2_SSH_PORT }}
                   script: |
-                      cd /home/${{ secrets.EC2_USER }}/server
+                      cd /home/${{ secrets.EC2_USER }}/${{ secrets.SERVER_NAME }}/
                       # Pull the latest images
                       sudo docker compose --profile prod pull
 
