--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   postgres:
     image: postgres:16-alpine
-    container_name: auth_postgress
+    container_name: ${SERVER_NAME}_postgres
     restart: unless-stopped
     profiles:
       - prod
@@ -23,11 +23,11 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - app-network
+      - ${SERVER_NAME}_net
 
   server:
-    image: shamimrana2006/server:latest
-    container_name: server
+    image: ${IMMAGE_NAME}
+    container_name: ${SERVER_NAME}
     restart: unless-stopped
     profiles:
       - prod
@@ -38,50 +38,51 @@ services:
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       NODE_ENV: production
     ports:
-      - '5090:6545'
+      - '${SERVER_PORT}:${PORT}'
     depends_on:
       postgres:
         condition: service_healthy
     networks:
-      - app-network
+      - ${SERVER_NAME}_net
 
-  frontend:
-    image: shamimrana2006/frontend:latest
-    container_name: frontend
-    restart: unless-stopped
-    profiles:
-      - prod
-      - frontend
-    env_file:
-      - .env.local
-    ports:
-      - '5080:8545'
-    networks:
-      - app-network
+  # frontend:
+  #   image: ${IMMAGE_NAME}
+  #   container_name: ${SERVER_NAME}_frontend
+  #   restart: unless-stopped
+  #   profiles:
+  #     - prod
+  #     - frontend
+  #   env_file:
+  #     - .env.local
+  #   ports:
+  #     - '5080:8545'
+  #   networks:
+  #     - ${SERVER_NAME}_net
 
   prisma-studio:
-    image: shamimrana2006/server:latest
-    container_name: prisma_studio
+    image: ${IMMAGE_NAME}
+    container_name: ${SERVER_NAME}_prisma_studio
     restart: unless-stopped
     profiles:
       - prod
-      - dev
       - server
     env_file:
       - .env
     environment:
       DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
     ports:
-      - '7896:5555'
-    command: npx prisma studio --port 5555 --browser none
+      - '${PRISMA_STUDIO_PORT_LOCAL}:${PRISMA_STUDIO_PORT}'
+    command: npx prisma studio --port ${PRISMA_STUDIO_PORT} --browser none
     depends_on:
       postgres:
         condition: service_healthy
     networks:
-      - app-network
+      - ${SERVER_NAME}_net
 
   caddy:
     image: caddy:latest
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     container_name: caddy
     restart: unless-stopped
     profiles:
@@ -89,6 +90,8 @@ services:
       - caddy
     ports:
       - '80:80'
+      - '8005:8005'
+      - '8006:8006'
       - '443:443'
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
@@ -97,13 +100,13 @@ services:
     depends_on:
       server:
         condition: service_started
-      frontend:
-        condition: service_started
+      # frontend:
+      #   condition: service_started
     networks:
-      - app-network
+      - ${SERVER_NAME}_net
 
 networks:
-  app-network:
+  ${SERVER_NAME}_net:
     driver: bridge
 
 volumes:
