update auth for some advance feature

--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,12 @@
 PORT=6545
 
 #email verification required or not if yes then true otherwise false
-EMAIL_VERIFICATION_REQUIRED=true
-SERVER_NAME=server
+EMAIL_VERIFICATION_REQUIRED=dfdf
+
 # PostgreSQL Database Credentials
-POSTGRES_USER=${SERVER_NAME}_user
-POSTGRES_PASSWORD=${SERVER_NAME}_Pass
-POSTGRES_DB=${SERVER_NAME}_DB
+POSTGRES_USER=authentication
+POSTGRES_PASSWORD=authentication123
+POSTGRES_DB=auth_db
 POSTGRES_PORT=8569
 
 # Database Connection URL
@@ -17,8 +17,8 @@ DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POS
 JWT_SECRET=your_jwt_secret_key_here
 
 # check cookie and token expiration easily
-ACCESS_TOKEN_EXPIRATION_MS= 604800000 # 7day in milliseconds
-REFRESH_TOKEN_EXPIRATION_MS= 2592000000 # 30 days in milliseconds
+ACCESS_TOKEN_EXPIRATION_MS= 10000 # 10 second in milliseconds
+REFRESH_TOKEN_EXPIRATION_MS= 12000 # 12 second in milliseconds
 
 
 
@@ -34,10 +34,11 @@ MAIL_FROM_NAME=Auth Service
 MAIL_FROM=exampleuser@example.com
 
 #s3 credentials
-AWS_ACCESS_KEY_ID=exampleaccesskeyid123456
-AWS_SECRET_ACCESS_KEY=exampleaccesskeysecret1234567890
+AWS_ACCESS_KEY_ID=example
+AWS_SECRET_ACCESS_KEY=examplesecretkey
 AWS_REGION=eu-north-1
-AWS_S3_BUCKET_NAME=examples3bucketname
+AWS_BUCKET_REGION=eu-north-1
+AWS_S3_BUCKET_NAME=shamimrana2006
 
 #AWS credential for github secret scanning test
 EC2_HOST=exampleec2host.amazonaws.com
