--- a/Caddyfile
+++ b/Caddyfile
@@ -3,19 +3,19 @@
 ### reverse_proxy localhost == host.docker.internal for in docker 
 
 # Frontend
-#shamimrana.me {
+#velvet.frontend.softvence.app {
 #   reverse_proxy frontend:8545
 #}
 
 # Backend API
-:8005, domain.com {
-    reverse_proxy host.docker.internal:5090
+:8000, velvet.api.softvence.app {
+    reverse_proxy velvet_backend:3200
 }
 
 # prisma studio
-:8006, domain.com {
+:8001, velvet.db.softvence.app {
      basicauth {
         shamimrana2006 $2y$10$/x6ntJtyiAp/NAJlWZlYK.ikj517KYpgqgC.pg4xY32LrLpH6qc6y
     }
-    reverse_proxy host.docker.internal:8462
+    reverse_proxy velvet_backend_postgres:7896
 }
