--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "velvet_iroon_backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -43,6 +43,7 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@types/bcryptjs": "^3.0.0",
+    "aws-sdk": "^2.1693.0",
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
